--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: 矿池/SS搭建|POOL BUILD
 SEOTitle: ningpool's blog | BY Blog
 header-img: img/post-bg-desk.jpg
 email: qq18867577832@gmail.com
